resources/css/queries.css
/* Big tablet to 1200px (widths smaller taht the 1140px row) */
@media only screen and (max-width: 1200px) {
    .hero-text-box {
        width: 100%;
        padding: 0 2%; 
    }

    .row { padding: 0 2%; }    
}


/* Small tablet to big tablet: from 768px to 1023px */
@media only screen and (max-width: 1023px) {
   body { font-size: 18px; }
   section { padding: 60px 0; }

   .long-copy {
        line-height: 145%;
        width: 80%;
        margin-left: 10%;
    }

    .steps-box:first-child { margin-top: 10px; }
    .steps-box:last-child { margin-top: 10px; } 

    .works-step { margin-bottom: 40px; }
    .works-step:last-of-type { margin-bottom: 60px; }    

    .app-screen { width: 50%; }

    .icon { 
        width: 15px; 
        margin-right: 10px;
    }
    .city-feture {font-size: 90%;}

    .plan-price {
        font-size:  250%;
    }

    .contact-form { width: 80%; }
}



/* Small phones to small tablets: from 481px to 767px */
@media only screen and (max-width: 767px) {

    body { font-size: 16px; }
    section { padding: 30px 0; }
    .row,
    .hero-text-box { padding: 0 4%; }

    .col { 
        width: 100%; 
        margin: 0 0 4% 0;
    }

    .meals-showcase li {
        width: 50%;
    }

    .main-nav { display: none;}

    h1 { font-size: 180%; }
    h2 { font-size: 150%; }

    .long-copy {
        width: 100%;
        margin-left: 0;
        text-align: center;
    }

    .app-screen { width: 40%; }

    .steps-box:first-child { text-align: center; }

    .works-step { margin-bottom: 30px; }
    .works-step:last-of-type { 
        margin-bottom: 30px; 
        text-align: center;
    }    

    .works-step div {
        height: 40px;
        width: 40px;
        padding: 4px;
        font-size:150%;
        margin-right: 15px;
        float: left;
    }

    .box img { height: 300px; }
}

/* Small phones: from 0 to 480px */
@media only screen and (max-width: 480px) {
    section { padding: 25px 0; }

    footer { padding: 25px 0; }
    
    .contact-form { width: 100%; }

    blockquote:before {
        top: 5px;
    }
    
    cite {
    margin-top: 10px;
    margin-bottom: 15px;
    }
}

